--- a/package.json
+++ b/package.json
@@ -12,18 +12,30 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@mdi/font": "7.4.47",
     "axios": "^1.7.7",
+    "clipboard": "^2.0.11",
     "core-js": "^3.37.1",
     "crypto-js": "^4.2.0",
+    "highlight.js": "^11.10.0",
+    "katex": "^0.13.24",
+    "markdown-it": "^14.1.0",
+    "markdown-it-katex": "^2.0.3",
+    "monaco-editor": "^0.52.0",
+    "monaco-editor-webpack-plugin": "^7.1.0",
+    "monaco-languages": "^2.11.1",
     "roboto-fontface": "*",
+    "vatex": "^0.1.0",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.9.0",
+    "@types/katex": "^0.16.7",
+    "@types/markdown-it": "^14.1.2",
+    "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
